Revert "fixed map not showing while clicked after sign in clicked"
This reverts commit 66b7a8078afcc656922759fd7ac4f6a5378ff522.

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -531,7 +531,6 @@ video {
 }
 
 #the-map {
-    display: none;
     bottom: 0;
     height: 55%;
     left: 0;
